test/conformance/chainsaw/policy-validation/cluster-policy/crd-non-exist/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: testresources.test.kyverno.io
spec:
  group: test.kyverno.io
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            properties:
              replicas:
                type: integer
                minimum: 0
  scope: Namespaced
  names:
    plural: testresources
    singular: testresource
    kind: TestResource
