test/conformance/chainsaw/policy-validation/cluster-policy/crd-non-exist/custom-resource.yaml
apiVersion: test.kyverno.io/v1
kind: TestResource
metadata:
  name: test-custom-resource
  namespace: default
spec:
  replicas: 0
