test/conformance/chainsaw/policy-validation/cluster-policy/crd-non-exist/policy-notready-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-node-pool-deletion
status:
  conditions:
  - message: Not Ready
    reason: Failed
    status: "False"
    type: Ready
