test/conformance/chainsaw/policy-validation/cluster-policy/crd-non-exist/policy-ready-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-node-pool-deletion
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
